{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 479,
  "lineage": "907d988a-3d54-06e3-7780-cfcf723ff852",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a512ad10d82b9e2",
            "arn": "arn:aws:ec2:eu-central-1:644435390668:instance/i-08252c9e39e60f7d0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08252c9e39e60f7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06202f10a1f1e2ef7",
            "private_dns": "ip-10-10-0-9.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.9",
            "public_dns": "ec2-3-66-30-48.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.30.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8f7c50509028cbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0683c2dae4ce4d532",
            "tags": {
              "Name": "adam_server2"
            },
            "tags_all": {
              "Name": "adam_server2",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "adam-server2",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_security_group_ids": [
              "sg-07ace754931083cbd"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.adam-igw",
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub1",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a512ad10d82b9e2",
            "arn": "arn:aws:ec2:eu-central-1:644435390668:instance/i-0d2b447ff3c83002d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2b447ff3c83002d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8f240471da5a3ce",
            "private_dns": "ip-10-10-0-196.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.196",
            "public_dns": "ec2-3-72-61-54.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.61.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6a3b8ebae95ee15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0407dfa1d984d7375",
            "tags": {
              "Name": "adam_server1",
              "created_by": "Adam"
            },
            "tags_all": {
              "Name": "adam_server1",
              "bootcamp": "poland1",
              "created_by": "Adam"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "adam-server1",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_security_group_ids": [
              "sg-07ace754931083cbd"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.adam-igw",
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub2",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "adam-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:internet-gateway/igw-02f1fcd96756a88f8",
            "id": "igw-02f1fcd96756a88f8",
            "owner_id": "644435390668",
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "dependencies": [
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "adam-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:loadbalancer/app/adam-lb/3dac9c510f5b83f5",
            "arn_suffix": "app/adam-lb/3dac9c510f5b83f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "adam-lb-6409144.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:loadbalancer/app/adam-lb/3dac9c510f5b83f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "adam-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07ace754931083cbd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0407dfa1d984d7375"
              },
              {
                "subnet_id": "subnet-0683c2dae4ce4d532"
              }
            ],
            "subnets": [
              "subnet-0407dfa1d984d7375",
              "subnet-0683c2dae4ce4d532"
            ],
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_id": "vpc-08e9f6de0fd6a6c1b",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub1",
            "aws_subnet.adam-terra-sub2",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "adam-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:listener/app/adam-lb/3dac9c510f5b83f5/ce6abde8e317e9a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:listener/app/adam-lb/3dac9c510f5b83f5/ce6abde8e317e9a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:loadbalancer/app/adam-lb/3dac9c510f5b83f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.adam-lb",
            "aws_lb_target_group.adam-target",
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub1",
            "aws_subnet.adam-terra-sub2",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "adam-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c",
            "arn_suffix": "targetgroup/adam-target/cc6c7d3748aac22c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "adam-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "dependencies": [
            "aws_vpc.adam-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "adam-lb-attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c-20221005214157876000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c",
            "target_id": "i-08252c9e39e60f7d0"
          },
          "dependencies": [
            "aws_instance.web_server1",
            "aws_internet_gateway.adam-igw",
            "aws_lb_target_group.adam-target",
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub1",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "adam-lb-attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c-20221005214157819200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:644435390668:targetgroup/adam-target/cc6c7d3748aac22c",
            "target_id": "i-0d2b447ff3c83002d"
          },
          "dependencies": [
            "aws_instance.web_server2",
            "aws_internet_gateway.adam-igw",
            "aws_lb_target_group.adam-target",
            "aws_security_group.adam-sg",
            "aws_subnet.adam-terra-sub2",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adam-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:route-table/rtb-0fe4388650e5899d3",
            "id": "rtb-0fe4388650e5899d3",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f1fcd96756a88f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.adam-igw",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00773194d8cba0bc1",
            "route_table_id": "rtb-0fe4388650e5899d3",
            "subnet_id": "subnet-0683c2dae4ce4d532"
          },
          "dependencies": [
            "aws_internet_gateway.adam-igw",
            "aws_route_table.adam-rtb",
            "aws_subnet.adam-terra-sub1",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b33ea0dd006e62",
            "route_table_id": "rtb-0fe4388650e5899d3",
            "subnet_id": "subnet-0407dfa1d984d7375"
          },
          "dependencies": [
            "aws_internet_gateway.adam-igw",
            "aws_route_table.adam-rtb",
            "aws_subnet.adam-terra-sub2",
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adam-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:security-group/sg-07ace754931083cbd",
            "description": "Security Group for Adam Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ace754931083cbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound connection",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound connection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "adam-server-sg",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "adam-terra-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:subnet/subnet-0683c2dae4ce4d532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0683c2dae4ce4d532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "dependencies": [
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "adam-terra-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:subnet/subnet-0407dfa1d984d7375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.0.192/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0407dfa1d984d7375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            },
            "vpc_id": "vpc-08e9f6de0fd6a6c1b"
          },
          "dependencies": [
            "aws_vpc.adam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adam-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:644435390668:vpc/vpc-08e9f6de0fd6a6c1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/24",
            "default_network_acl_id": "acl-064b77883400a6f19",
            "default_route_table_id": "rtb-01fa6267d49587ec4",
            "default_security_group_id": "sg-0a123e5d22f4e3ed6",
            "dhcp_options_id": "dopt-4bd0ec20",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e9f6de0fd6a6c1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fa6267d49587ec4",
            "owner_id": "644435390668",
            "tags_all": {
              "Name": "adam-tagged",
              "bootcamp": "poland1",
              "created_by": "Adam Stegienko"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}